# ot-harjoitustyo2022

./: README.md  pyproject.toml  tasks.py
data/: database.sqlite
dokumentaatio/: arkkitehtuuri.md  changelog.md  kayttoohje.md  testaus.md  tuntikirjanpito.md  vaatimusmaarittely.md
laskarit/viikko1/: gitlog.txt
laskarit/viikko2/maksukortti/: pyproject.toml
laskarit/viikko2/maksukortti/src/: .maksukortti.py.swp
laskarit/viikko2/maksukortti/src/tests/: maksukortti_test.py
laskarit/viikko2/unicafe/src/tests/: kassapaate_test.py  maksukortti_test.py
src/: config.py  index.py  initialize_database.py
src/entities/: course.py  user.py
src/repositories/: course_repository.py  user_repository.py
src/services/: service.py
src/tests/: service_test.py
src/tests/repositories/: course_repository_test.py  user_repository_test.py
src/tests/services/: service_test.py
src/ui/: add_course_view.py  frontpage_view.py  login_view.py  register_view.py  set_grade_view.py  ui.py
