[tool.poetry]
name = "ot-harjoitustyo2022"
version = "0.1.0"
description = ""
authors = ["isabel <isabel.suorsa@helsinki.fi>"]
readme = "README.md"
packages = [{include = "ot_harjoitustyo2022"}]

[tool.poetry.dependencies]
python = "^3.10"
invoke = "^1.7.3"


[tool.poetry.group.dev.dependencies]
pytest = "^7.2.0"
pylint = "^2.15.6"
coverage = "^6.5.0"
autopep8 = "^2.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
